# adios

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
bins/: create_database.py  dash_app.py  upload_data_to_s3.py
dags/: ingest_to_db.py  ingest_to_db_from_gcs.py  ingest_to_db_from_s3.py  ingestion_to_db.py  test_dag.py
data/: chart-data.csv  chart-ddl.sql  chart2000-songmonth-0-3-0064.csv
