[tool.poetry]
name = "adios"
version = "0.0.0"
description = "Airflow database ingestion of samples"
authors = ["Enrique Olivares <enrique.olivares@wizeline.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = {version = "2.3.0", python = ">=3.9,<3.10"}
apache-airflow-providers-postgres = {version = "5.0.0", python = ">=3.9,<3.10"}
apache-airflow-providers-amazon = {version = "4.0.0", python = ">=3.9,<3.10"}
apache-airflow-providers-google = {version = "8.1.0", python = ">=3.9,<3.10"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
isort = "^5.10.1"

[tool.black]
line-length = 80
target-version = ['py39']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
